--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.56.0",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "logging": "^3.3.0",
     "mongoose": "^8.1.1",
     "prettier": "^3.2.4"
   }
