--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.7",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
@@ -36,6 +37,8 @@
     "jsonwebtoken": "^9.0.2",
     "logging": "^3.3.0",
     "mongoose": "^8.1.1",
-    "prettier": "^3.2.4"
+    "morgan": "^1.10.0",
+    "prettier": "^3.2.4",
+    "slugify": "^1.6.6"
   }
 }
