chore(): added a password reset feature

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5000
 Mongo_Uri = "mongodb+srv://marrnuel12:marrnuel12@cluster0.enuooq4.mongodb.net/ecomm?retryWrites=true&w=majority"
 JWT= secret
+MAIL = marrnuel123@gmail.com
+PW = tvzn ogda dyto dgtv
