--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.7",
+    "@types/nodemailer": "^6.4.14",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -38,6 +39,7 @@
     "logging": "^3.3.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.9",
     "prettier": "^3.2.4",
     "slugify": "^1.6.6"
   }
